k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nagp-assignment
  labels:
    project: nagp-k8s-assignment
