k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: nagp-assignment
  labels:
    app: api-service
    tier: backend
spec:
  # nodeport backing the ingress
  type: NodePort
  selector:
    app: api-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
